[gd_scene load_steps=2 format=3 uid="uid://b60src74kdy6f"]

[ext_resource type="Script" uid="uid://dtblpnl2g18l4" path="res://space_client.gd" id="1_ecx65"]

[node name="HeistClient" type="Node2D"]
script = ExtResource("1_ecx65")

[node name="Panel" type="Panel" parent="."]
offset_right = 920.0
offset_bottom = 495.0

[node name="ShieldButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 181.0
offset_top = 64.0
offset_right = 243.0
offset_bottom = 107.0
text = "SHIELD"

[node name="ShootButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 181.0
offset_top = 126.0
offset_right = 243.0
offset_bottom = 169.0
text = "SHOOT"

[node name="LeftButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 103.0
offset_top = 97.0
offset_right = 165.0
offset_bottom = 140.0
text = "LEFT"

[node name="RightButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 263.0
offset_top = 96.0
offset_right = 325.0
offset_bottom = 139.0
text = "RIGHT"

[node name="ConnectButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 110.0
offset_top = 281.0
offset_right = 298.0
offset_bottom = 315.0
text = "Connect"

[node name="PilotPower" type="VSlider" parent="Panel"]
layout_mode = 0
offset_left = 618.0
offset_top = 80.0
offset_right = 652.0
offset_bottom = 260.0
max_value = 6.0

[node name="SciencePower" type="VSlider" parent="Panel"]
layout_mode = 0
offset_left = 655.0
offset_top = 80.0
offset_right = 689.0
offset_bottom = 260.0
max_value = 6.0

[node name="WeaponsPower" type="VSlider" parent="Panel"]
layout_mode = 0
offset_left = 696.0
offset_top = 80.0
offset_right = 730.0
offset_bottom = 260.0
max_value = 6.0

[node name="LabelAvailablePower" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 556.0
offset_top = 288.0
offset_right = 651.0
offset_bottom = 311.0
text = "Avail power:"

[node name="LabelModules" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 627.0
offset_top = 49.0
offset_right = 722.0
offset_bottom = 72.0
text = "P        S       W"

[node name="TextAvailablePower" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 660.0
offset_top = 287.0
offset_right = 724.0
offset_bottom = 316.0

[node name="ChkMissiles" type="CheckButton" parent="Panel"]
layout_mode = 0
offset_left = 119.0
offset_top = 210.0
offset_right = 163.0
offset_bottom = 234.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 166.0
offset_top = 212.0
offset_right = 206.0
offset_bottom = 235.0
text = "Fire missile"

[connection signal="pressed" from="Panel/ShieldButton" to="." method="_on_up_button_pressed"]
[connection signal="button_down" from="Panel/ShootButton" to="." method="_on_down_button_button_down"]
[connection signal="pressed" from="Panel/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Panel/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Panel/ConnectButton" to="." method="_on_connect_pressed"]
[connection signal="value_changed" from="Panel/PilotPower" to="." method="_on_pilot_power_value_changed"]
[connection signal="value_changed" from="Panel/SciencePower" to="." method="_on_science_power_value_changed"]
[connection signal="value_changed" from="Panel/WeaponsPower" to="." method="_on_weapons_power_value_changed"]
